# prog-sys-int

./: README.md
backend/: CMakeLists.txt
backend/src/: App.cpp  AppComponent.hpp
backend/src/adapters/: JobAdapter.cpp  JobAdapter.hpp  SiteAdapter.cpp  SiteAdapter.hpp
backend/src/controller/: JobController.hpp  ProgrammingController.hpp  RobotController.hpp
backend/src/dto/: DTOs.hpp  JobDTO.hpp  ResponseDTO.hpp  SiteDTO.hpp  SocketDTO.hpp
backend/src/models/: JobModel.hpp  SiteModel.hpp  SocketModel.hpp
backend/src/services/: JobService.cpp  JobService.hpp  SiteService.cpp  SiteService.hpp
backend/src/utility/: JobDTOMapper.cpp  JobDTOMapper.hpp  OatppUtils.cpp  OatppUtils.hpp  SiteDTOMapper.cpp  SiteDTOMapper.hpp
backend/test/: JobControllerTest.cpp  JobControllerTest.hpp  MyControllerTest.cpp  MyControllerTest.hpp  ProgrammingControllerTest.cpp  ProgrammingControllerTest.hpp  RobotControllerTest.cpp  RobotControllerTest.hpp  tests.cpp
backend/test/app/: MyApiTestClient.hpp  TestComponent.hpp
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
frontend/src/: App.js  App.test.tsx  App.tsx  index.js
frontend/src/components/: JobControlPanel.jsx  JobControlPanel.test.tsx  JobControlPanel.tsx  SocketGrid.jsx  SocketGrid.test.tsx  SocketGrid.tsx  StatDisplay.test.tsx  StatsDisplay.jsx  StatsDisplay.tsx
frontend/src/contexts/: SnackbarProvider.tsx
frontend/src/hooks/: useApiWrapper.ts  useDevicePicker.ts  useDevicePlacer.ts
frontend/src/models/: Job.ts  Socket.ts
frontend/src/services/: api.js  api.ts
frontend/src/types/: ApiResponse.ts
